Add a Moby Dick page and a menu

--- a/tags.html
+++ b/tags.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>HTML Tags</title>
     <meta charset="utf-8">
   </head>
   <body>
 
+    <div>
+      <a href="index.html">Home</a>
+      <a href="tags.html">HTML Tags</a>
+      <a href="moby_dick.html">Moby Dick</a>
+    </div>
+
+   <header>
     <h1>Important HTML tags</h1>
+  </header>
 
   <a href="https://www.flickr.com/photos/jdhancock/3814523970">
     <img src="images/storm_trooper_tagged.jpg" alt="Tagged Storm Trooper">
   </a>
 
+  <div>
     <p>
       This page is designed as a quick reference for some of the common tags
       covered in <a href="http://learnenough.com/html-tutorial"><em>Learn
@@ -24,7 +33,9 @@
       The tables below don't include all HTML tags, but they do list many of
       the most important ones.
     </p>
+  </div>
 
+  <div>
     <h2>Block Elements</h2>
 
     <table>
@@ -64,7 +75,9 @@
         <td>include a table data cell</td>
       </tr>
     </table>
+  </div>
 
+  <div>
     <h2>Inline Elements</h2>
 
       <table>
@@ -115,6 +128,7 @@
                alt="Michael Hartl"></td>
          </tr>
       </table>
+  </div>
 
   </body>
 </html>
