--- a/tags.html
+++ b/tags.html
@@ -6,11 +6,11 @@
   </head>
   <body>
 
-    <div>
-      <a href="index.html">Home</a>
-      <a href="tags.html">HTML Tags</a>
-      <a href="moby_dick.html">Moby Dick</a>
-    </div>
+    <div style="text-align: right;">
+       <a href="index.html" style="text-decoration: none; color: blue;">Home</a>
+       <a href="tags.html" style="margin: 0 0 0 10px; text-decoration: none; color: blue;">HTML Tags</a>
+       <a href="moby_dick.html" style="margin: 0 0 0 10px; text-decoration: none; color: blue;">Moby Dick</a>
+     </div>
 
    <header>
     <h1>Important HTML tags</h1>
@@ -127,6 +127,43 @@
            <td><img src="https://bit.ly/1MZAFuQ"
                alt="Michael Hartl"></td>
          </tr>
+      </table>
+  </div>
+
+  <div>
+    <h2>Document Tags</h2>
+
+      <table>
+        <tr>
+          <th>Tag</th>
+          <th>Name</th>
+          <th>Purpose</th>
+        </tr>
+        <tr>
+          <td><code>html</code></td>
+          <td>html</td>
+          <td>Defines the root of an html document</td>
+        </tr>
+        <tr>
+          <td><code>head</code></td>
+          <td>head</td>
+          <td>Defines information about the document</td>
+        </tr>
+        <tr>
+          <td><code>body</code></td>
+          <td>body</td>
+          <td>Defines the document's body</td>
+        </tr>
+        <tr>
+          <td><code>title</code></td>
+          <td>title</td>
+          <td>Defines the title of a document</td>
+        </tr>
+        <tr>
+          <td><code>meta</code></td>
+          <td>meta</td>
+          <td>Data about data</td>
+        </tr>
       </table>
   </div>
 
